--- a/one.config
+++ b/one.config
@@ -1,57 +1,56 @@
-CONFIG_TARGET_ramips=y
-CONFIG_TARGET_ramips_mt7621=y
-CONFIG_TARGET_ramips_mt7621_DEVICE_phicomm_k2p=y
-CONFIG_LIBCURL_COOKIES=y
-CONFIG_LIBCURL_CRYPTO_AUTH=y
-CONFIG_LIBCURL_FILE=y
-CONFIG_LIBCURL_FTP=y
-CONFIG_LIBCURL_HTTP=y
-CONFIG_LIBCURL_NGHTTP2=y
-CONFIG_LIBCURL_OPENSSL=y
-CONFIG_LIBCURL_PROXY=y
-CONFIG_LIBCURL_TFTP=y
-CONFIG_LIBCURL_THREADED_RESOLVER=y
-CONFIG_LIBCURL_TLS_SRP=y
-CONFIG_LIBCURL_UNIX_SOCKETS=y
-CONFIG_LIBSODIUM_MINIMAL=y
-# CONFIG_PACKAGE_6in4 is not set
-CONFIG_PACKAGE_chinadns-ng=y
-CONFIG_PACKAGE_coreutils=y
-CONFIG_PACKAGE_coreutils-base64=y
-CONFIG_PACKAGE_coreutils-nohup=y
-CONFIG_PACKAGE_curl=y
-CONFIG_PACKAGE_dns2socks=y
-CONFIG_PACKAGE_dns2tcp=y
-CONFIG_PACKAGE_ip-full=y
-# CONFIG_PACKAGE_ip6tables is not set
-CONFIG_PACKAGE_ipset=y
-CONFIG_PACKAGE_ipt2socks=y
-CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
-CONFIG_PACKAGE_iptables-mod-iprange=y
-CONFIG_PACKAGE_iptables-mod-tproxy=y
-# CONFIG_PACKAGE_ipv6helper is not set
-CONFIG_PACKAGE_kmod-ipt-conntrack-extra=y
-CONFIG_PACKAGE_kmod-ipt-iprange=y
-# CONFIG_PACKAGE_kmod-ipt-nat6 is not set
-# CONFIG_PACKAGE_kmod-ipt-offload is not set
-CONFIG_PACKAGE_kmod-ipt-tproxy=y
-# CONFIG_PACKAGE_kmod-nf-flow is not set
-# CONFIG_PACKAGE_kmod-nf-nat6 is not set
-# CONFIG_PACKAGE_kmod-sit is not set
-CONFIG_PACKAGE_kmod-tcp-bbr=y
-CONFIG_PACKAGE_libbpf=y
-CONFIG_PACKAGE_libcurl=y
-CONFIG_PACKAGE_libelf=y
-CONFIG_PACKAGE_libev=y
-CONFIG_PACKAGE_libipset=y
-CONFIG_PACKAGE_libmbedtls=y
-CONFIG_PACKAGE_libnghttp2=y
-# CONFIG_PACKAGE_librt is not set
-CONFIG_PACKAGE_libsodium=y
-CONFIG_PACKAGE_libuci-lua=y
-# CONFIG_PACKAGE_luci-app-adguardhome_INCLUDE_binary is not set
-# CONFIG_PACKAGE_luci-app-bypass_INCLUDE_ShadowsocksR_Libev_Client is not set
-# CONFIG_PACKAGE_luci-app-bypass_INCLUDE_Simple_Obfs is not set
+CONFIG_TARGET_ramips=y                                                                                                                                                                                                                                                                                                         
+CONFIG_TARGET_ramips_mt7621=y                                                                                                                                                                                                                                                                                                  
+CONFIG_TARGET_ramips_mt7621_DEVICE_phicomm_k2p=y                                                                                                                                                                                                                                                                               
+# CONFIG_BUSYBOX_DEFAULT_FEATURE_IPV6 is not set                                                                                                                                                                                                                                                                               
+# CONFIG_IPV6 is not set                                                                                                                                                                                                                                                                                                       
+# CONFIG_KERNEL_IPV6 is not set                                                                                                                                                                                                                                                                                                
+CONFIG_LIBCURL_COOKIES=y                                                                                                                                                                                                                                                                                                       
+CONFIG_LIBCURL_CRYPTO_AUTH=y                                                                                                                                                                                                                                                                                                   
+CONFIG_LIBCURL_FILE=y                                                                                                                                                                                                                                                                                                          
+CONFIG_LIBCURL_FTP=y                                                                                                                                                                                                                                                                                                           
+CONFIG_LIBCURL_HTTP=y                                                                                                                                                                                                                                                                                                          
+CONFIG_LIBCURL_NGHTTP2=y                                                                                                                                                                                                                                                                                                       
+CONFIG_LIBCURL_OPENSSL=y                                                                                                                                                                                                                                                                                                       
+CONFIG_LIBCURL_PROXY=y                                                                                                                                                                                                                                                                                                         
+CONFIG_LIBCURL_TFTP=y                                                                                                                                                                                                                                                                                                          
+CONFIG_LIBCURL_THREADED_RESOLVER=y                                                                                                                                                                                                                                                                                             
+CONFIG_LIBCURL_TLS_SRP=y                                                                                                                                                                                                                                                                                                       
+CONFIG_LIBCURL_UNIX_SOCKETS=y                                                                                                                                                                                                                                                                                                  
+CONFIG_LIBSODIUM_MINIMAL=y                                                                                                                                                                                                                                                                                                     
+CONFIG_PACKAGE_chinadns-ng=y                                                                                                                                                                                                                                                                                                   
+CONFIG_PACKAGE_coreutils=y                                                                                                                                                                                                                                                                                                     
+CONFIG_PACKAGE_coreutils-base64=y                                                                                                                                                                                                                                                                                              
+CONFIG_PACKAGE_coreutils-nohup=y                                                                                                                                                                                                                                                                                               
+CONFIG_PACKAGE_curl=y                                                                                                                                                                                                                                                                                                          
+CONFIG_PACKAGE_dns2socks=y                                                                                                                                                                                                                                                                                                     
+CONFIG_PACKAGE_dns2tcp=y                                                                                                                                                                                                                                                                                                       
+CONFIG_PACKAGE_ip-full=y                                                                                                                                                                                                                                                                                                       
+CONFIG_PACKAGE_ipset=y                                                                                                                                                                                                                                                                                                         
+CONFIG_PACKAGE_ipt2socks=y                                                                                                                                                                                                                                                                                                     
+CONFIG_PACKAGE_iptables-mod-conntrack-extra=y                                                                                                                                                                                                                                                                                  
+CONFIG_PACKAGE_iptables-mod-iprange=y                                                                                                                                                                                                                                                                                          
+CONFIG_PACKAGE_iptables-mod-tproxy=y                                                                                                                                                                                                                                                                                           
+CONFIG_PACKAGE_kmod-ipt-conntrack-extra=y                                                                                                                                                                                                                                                                                      
+CONFIG_PACKAGE_kmod-ipt-iprange=y                                                                                                                                                                                                                                                                                              
+# CONFIG_PACKAGE_kmod-ipt-offload is not set                                                                                                                                                                                                                                                                                   
+CONFIG_PACKAGE_kmod-ipt-tproxy=y                                                                                                                                                                                                                                                                                               
+# CONFIG_PACKAGE_kmod-nf-flow is not set                                                                                                                                                                                                                                                                                       
+# CONFIG_PACKAGE_kmod-nf-ipt6 is not set                                                                                                                                                                                                                                                                                       
+CONFIG_PACKAGE_kmod-tcp-bbr=y                                                                                                                                                                                                                                                                                                  
+CONFIG_PACKAGE_libbpf=y                                                                                                                                                                                                                                                                                                        
+CONFIG_PACKAGE_libcurl=y                                                                                                                                                                                                                                                                                                       
+CONFIG_PACKAGE_libelf=y                                                                                                                                                                                                                                                                                                        
+CONFIG_PACKAGE_libev=y                                                                                                                                                                                                                                                                                                         
+# CONFIG_PACKAGE_libip6tc is not set                                                                                                                                                                                                                                                                                           
+CONFIG_PACKAGE_libipset=y                                                                                                                                                                                                                                                                                                      
+CONFIG_PACKAGE_libmbedtls=y                                                                                                                                                                                                                                                                                                    
+CONFIG_PACKAGE_libnghttp2=y                                                                                                                                                                                                                                                                                                    
+# CONFIG_PACKAGE_librt is not set                                                                                                                                                                                                                                                                                              
+CONFIG_PACKAGE_libsodium=y                                                                                                                                                                                                                                                                                                     
+CONFIG_PACKAGE_libuci-lua=y                                                                                                                                                                                                                                                                                                    
+# CONFIG_PACKAGE_luci-app-adguardhome_INCLUDE_binary is not set                                                                                                                                                                                                                                                                
+# CONFIG_PACKAGE_luci-app-bypass_INCLUDE_ShadowsocksR_Libev_Client is not set                                                                                                                                                                                                                                                  
+# CONFIG_PACKAGE_luci-app-bypass_INCLUDE_Simple_Obfs is not set                                                                                                                                                                                                                                                                
 # CONFIG_PACKAGE_luci-app-bypass_INCLUDE_Socks_Server is not set
 # CONFIG_PACKAGE_luci-app-bypass_INCLUDE_Xray is not set
 # CONFIG_PACKAGE_luci-app-diskman_INCLUDE_btrfs_progs is not set
@@ -78,8 +77,6 @@ CONFIG_PACKAGE_luci-i18n-mosdns-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
 CONFIG_PACKAGE_microsocks=y
 CONFIG_PACKAGE_mosdns=y
-# CONFIG_PACKAGE_odhcp6c is not set
-# CONFIG_PACKAGE_odhcpd-ipv6only is not set
 CONFIG_PACKAGE_resolveip=y
 CONFIG_PACKAGE_shadowsocks-libev-config=y
 CONFIG_PACKAGE_shadowsocks-libev-ss-local=y
@@ -91,3 +88,5 @@ CONFIG_PACKAGE_v2dat=y
 CONFIG_PACKAGE_v2ray-geoip=y
 CONFIG_PACKAGE_v2ray-geosite=y
 # CONFIG_PACKAGE_wget-ssl is not set
+CONFIG_TARGET_ROOTFS_CPIOGZ=y
+CONFIG_TARGET_ROOTFS_TARGZ=y
