--- a/.github/workflows/msg-imm.yaml
+++ b/.github/workflows/msg-imm.yaml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: msg-padavan
+name: msg-imm
 
 env:
   REPO_URL: https://github.com/immortalwrt/immortalwrt
