--- a/.github/workflows/msg-only.yml
+++ b/.github/workflows/msg-only.yml
@@ -12,7 +12,7 @@ name: msg-padavan
 
 env:
   REPO_URL: https://github.com/padavanonly/immortalwrt
-  REPO_BRANCH: openwrt-21.02
+  REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: one.config
   DIY_P1_SH: diy-part1.sh
