--- a/.github/workflows/msg-Lieno.yml
+++ b/.github/workflows/msg-Lieno.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: msg-padavan
+name: msg-Lieno
 
 env:
   REPO_URL: https://github.com/benboguan/openwrt-Lienol
